syntax = "proto3";

package tendermint.types;
option  go_package = "github.com/tendermint/tendermint/types";

message ProtoPartSetHeader {
  int32 total = 1;
  bytes hash  = 2;
}

message ProtoBlockID {
  bytes              hash         = 1;
  ProtoPartSetHeader parts_header = 2;
}

// Block Header
message ProtoHeader {
  // basic block info
  ProtoVersion   version  = 1;
  string         chain_id = 2;
  int64          height   = 3;
  ProtoTimestamp time     = 4;

  // prev block info
  ProtoBlockID last_block_id = 5;

  // hashes of block data
  bytes last_commit_hash = 6;  // commit from validators from the last block
  bytes data_hash        = 7;  // transactions

  // hashes from the app output from the prev block
  bytes validators_hash      = 8;   // validators for the current block
  bytes next_validators_hash = 9;   // validators for the next block
  bytes consensus_hash       = 10;  // consensus params for current block
  bytes app_hash             = 11;  // state after txs from the previous block
  bytes last_results_hash    = 12;  // root hash of all results from the txs from the previous block

  // consensus info
  bytes evidence_hash    = 13;  // evidence included in the block
  bytes proposer_address = 14;  // original proposer of the block
}

// Block & app version
message ProtoVersion {
  uint64 block = 1;
  uint64 app   = 2;
}

// Timestamp wraps how amino encodes time.
// This is the protobuf well-known type protobuf/timestamp.proto
// See:
// https://github.com/google/protobuf/blob/d2980062c859649523d5fd51d6b55ab310e47482/src/google/protobuf/timestamp.proto#L123-L135
// NOTE/XXX: nanos do not get skipped if they are zero in amino.
message ProtoTimestamp {
  int64 seconds = 1;
  int32 nanos   = 2;
}
